better mobile version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-slate-900 text-slate-200 image-pixel">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
@@ -17,8 +17,9 @@
 
 </head>
 
-<body class="m-0 p-0 box-border font-[Balsamiq_Sans] h-full selection:bg-(--col-fail) selection:text-(--col-text-main)">
-	<div id="root"></div>
+<body>
+	<div id="root">
+	</div>
 	<script type="module" src="/src/main.jsx"></script>
 </body>
 
